[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "affine",
    "defusedxml",
    "docutils",
    "geopandas",
    "httpx",
    "jinja2",
    "matplotlib>=3.5.0",
    "metar",
    "metpy",
    "netCDF4",
    "numpy",
    "pandas",
    "paste",
    "pillow",
    "pyarrow",
    "pydantic",
    "pygrib",
    "pymemcache",
    "pyogrio",
    "pyproj",
    "psycopg",
    "rasterio",
    "rasterstats",
    "scipy",
    "shapely",
    # since psycopg 3 support requires it
    "sqlalchemy>=2",
    "xarray",
]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
description = "Collection of things that may help with processing weather data."
dynamic = ["version"]
keywords = ["meteorology"]
license = "MIT"
name = "pyiem"
readme = "README.md"

[project.urls]
"homepage" = "https://github.com/akrherz/pyIEM"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:numpy.ndarray size changed:RuntimeWarning",
    "ignore:'cgi' is deprecated and slated for removal:DeprecationWarning",
]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
preview = true
select = [
    "B",  # bugbear
    #  "D",  # pydocstyle
    "E",  # errors
    "ERA",  # commented out code
    "F",  # format
    "I",  # imports
    "PERF",  # performance
    "PLR0203",  # staticmethod
    "RET",  # return
    "T",  # types
]
ignore = [
    "PERF203",  # try,catch in loop
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools_scm]
version_scheme = "post-release"
