[metadata]
name = pyIEM
author = daryl herzmann
author_email = akrherz@gmail.com
url = https://github.com/akrherz/pyIEM
keywords = meteorology
license = Apache
license-file = LICENSE
description = Collection of things that may help with processing weather data.
description-file = README.md

[pep8]
# black conflicts with pep8 E203
ignore = W503,E203

[flake8]
ignore = W503,E203

[aliases]
test = pytest

[tool:pytest]
log_level = INFO
markers =
    mpl_image_compare

[options]
include_package_data = True
# Puzzling why this nomenclature is right.
package_dir =
    = src
packages = find:
setup_requires = setuptools_scm
install_requires =
    affine
    defusedxml
    geopandas
    jinja2
    matplotlib>=3.5.0
    metar
    metpy
    netCDF4
    numpy
    pandas
    pillow
    pyarrow
    pydantic
    pymemcache
    pyproj
    psycopg
    rasterio
    rasterstats
    requests
    scipy
    shapely
    sqlalchemy
    xarray

[options.packages.find]
where = src

