[pep8]
# black conflicts with pep8 E203
ignore = W503,E203

[flake8]
ignore = W503,E203

[aliases]
test = pytest

[tool:pytest]
log_level = INFO
markers =
    mpl_image_compare

[options]
include_package_data = True
# Puzzling why this nomenclature is right.
package_dir =
    = src
packages = find:
install_requires =
    affine
    defusedxml
    geopandas
    jinja2
    matplotlib>=3.5.0
    metar
    metpy
    netCDF4
    nh3
    numpy
    pandas
    paste
    pillow
    pyarrow
    pydantic
    pymemcache
    pyproj
    psycopg
    rasterio
    rasterstats
    requests
    scipy
    shapely
    # since psycopg 3 support requires it
    sqlalchemy>=2
    xarray

[options.packages.find]
where = src

