[pep8]
# black conflicts with pep8 E203
ignore = W503,E203

[flake8]
ignore = W503,E203

[aliases]
test = pytest

[tool:pytest]
log_level = INFO
markers =
    mpl_image_compare

[options]
include_package_data = True
# Puzzling why this nomenclature is right.
package_dir =
    = src
packages = find:


[options.packages.find]
where = src

